Added "GET /.well-known/jwks.json" endpoint
